--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redbox-react": "^1.4.3",
     "sass-loader": "^6.0.6",
