--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
+    "re-base": "^3.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
